<resources>
    <string name="app_name">labo05</string>
    <string name="newmovie">New Movie</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="calification">Calification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Billboard new Movie text -->
    <string name="newMovie">New</string>
    <!--Star Wars -->
    <string name="starWars_tittle">Star Wars episodio 3: la venganza de los Sith</string>
    <string name="starWars_calification">9.8</string>
    <string name="starWars_Category">Ciencia Ficcion</string>
    <string name="starWars_Description">
        La película se centra en el personaje de Anakin Skywalker, quien esta siendo tentado por el
        Lado Oscuro de la Fuerza mientras el Imperio Galáctico comienza a surgir. La trama también muestra
        la caída de de la República Galáctica y el ascenso del Emperador Palpatine.
    </string>

    <!--Harry Potter -->
    <string name="harryPotter_tittle">Harry Potter y la Piedra Filosofal</string>
    <string name="harryPotter_calification">9.5</string>
    <string name="harryPotter_Category">Fantasia, Aventuras</string>
    <string name="harryPotter_Description">
        El día de su cumpleaños, Harry Potter descubre que eshijo de dos conocidos hechiceros,
        de los que ha heredado poderes mágicos. Debe asistir auna famosa escuela de magia y hechicería,
        donde entabla una amistad con dos jóvenes que seconvertirán en sus compañeros de aventura.
    </string>

</resources>