<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.MovieFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_movie_height"
        android:layout_marginTop="@dimen/image_movie_marginUp"
        android:layout_marginLeft="@dimen/image_movie_marginLeft"
        android:layout_marginRight="@dimen/image_movie_marginRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_wars" />

    <TextView
        android:id="@+id/titulo_de_pelicula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_newMovie_title_marginLeft"
        android:layout_marginRight="@dimen/text_newMovie_title_marginRight"
        android:layout_marginTop="@dimen/text_newMovie_title_marginTop"
        android:text="@string/starWars_tittle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_newMovie_title_Size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/califcacion"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/calification_size"
        android:text="@string/starWars_calification"
        android:textColor="@color/calification"
        android:textSize="@dimen/calification_billboard_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genero"
        app:layout_constraintTop_toTopOf="@+id/genero" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_gender_Movie_marginTop"
        android:layout_marginLeft="@dimen/text_gender_Movie_marginLeft"
        android:text="@string/starWars_Category"
        android:textColor="@color/white"
        android:textSize="@dimen/text_gender_Movie_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_de_pelicula" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_Movie_description_marginTop"
        android:layout_marginLeft="@dimen/text_Movie_description_marginLeft"
        android:layout_marginRight="@dimen/text_Movie_description_marginRight"
        android:text="@string/starWars_Description"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Movie_description_Size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

</androidx.constraintlayout.widget.ConstraintLayout>